three-tier-vpc.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Deploy a highly available VPC for a three-tier architecture

Parameters:
  EnvironmentName:
    Type: String
    Description: Please insert the environment name
  VPCCIDR:
    Description: Please insert the IP range for the VPC (CIDR notation required)
    Type: String
    Default: 10.16.0.0/16
  WebSubnetACIDR:
    Description: Please insert the IP range for the public Web subnet in Availability Zone A
    Type: String
    Default: 10.16.0.0/22
  AppSubnetACIDR:
    Description: Please insert the IP range for the private App subnet in Availability Zone A
    Type: String
    Default: 10.16.4.0/22
  DBSubnetACIDR:
    Description: Please insert the IP range for the private DB subnet in Availability Zone A
    Type: String
    Default: 10.16.8.0/22
  WebSubnetBCIDR:
    Description: Please insert the IP range for the public Web subnet in Availability Zone B
    Type: String
    Default: 10.16.12.0/22
  AppSubnetBCIDR:
    Description: Please insert the IP range for the private App subnet in Availability Zone B
    Type: String
    Default: 10.16.16.0/22
  DBSubnetBCIDR:
    Description: Please insert the IP range for the private DB subnet in Availability Zone B
    Type: String
    Default: 10.16.20.0/22
  WebSubnetCCIDR:
    Description: Please insert the IP range for the public Web subnet in Availability Zone B
    Type: String
    Default: 10.16.24.0/22
  AppSubnetCIDR:
    Description: Please insert the IP range for the private App subnet in Availability Zone B
    Type: String
    Default: 10.16.28.0/22
  DBSubnetCCIDR:
    Description: Please insert the IP range for the private DB subnet in Availability Zone B
    Type: String
    Default: 10.16.32.0/22


Resources:
  # VPC
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  # Internet Gateway
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  # Internet Gateway Attachment
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # NAT Gateway EIPs
  NatGatewayEIPA:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGatewayEIPB:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGatewayEIPC:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc
      
  # NAT Gateways
  NatGatewayA:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIPA.AllocationId
      SubnetId: !Ref WebSubnetA
      
  NatGatewayB:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIPB.AllocationId
      SubnetId: !Ref WebSubnetB
      
  NatGatewayC:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIPC.AllocationId
      SubnetId: !Ref WebSubnetC

  # Subnets AZ-A
  WebSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref WebSubnetACIDR
      MapPublicIpOnLaunch: True
      AvailabilityZone:  !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_Web_A
  AppSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref AppSubnetACIDR
      MapPublicIpOnLaunch: False
      AvailabilityZone:  !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_App_A
  DBSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref DBSubnetACIDR
      MapPublicIpOnLaunch: False
      AvailabilityZone:  !Select [ 0, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_DB_A

  # Subnets AZ-B
  WebSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref WebSubnetBCIDR
      MapPublicIpOnLaunch: True
      AvailabilityZone:  !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_Web_B
  AppSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref AppSubnetBCIDR
      MapPublicIpOnLaunch: False
      AvailabilityZone:  !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_App_B
  DBSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref DBSubnetBCIDR
      MapPublicIpOnLaunch: False
      AvailabilityZone:  !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_DB_B

  # Subnets AZ-C
  WebSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref WebSubnetCCIDR
      MapPublicIpOnLaunch: True
      AvailabilityZone:  !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_Web_C
  AppSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref AppSubnetCCIDR
      MapPublicIpOnLaunch: False
      AvailabilityZone:  !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_App_C
  DBSubnetC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref DBSubnetCCIDR
      MapPublicIpOnLaunch: False
      AvailabilityZone:  !Select [ 1, !GetAZs '' ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_DB_C
          
  # Route Tables
  WebRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_WebRT

  AppRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_AppRT_AZA

  AppRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_AppRT_AZB

  AppRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_AppRT_AZC

  DBRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_DBRT_AZA

  DBRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_DBRT_AZB

  DBRouteTableC:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}_DBRT_AZC
          
  # Routes
  
  AppSubnetARoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AppRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayA

  AppSubnetBRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AppRouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayB

  AppSubnetCRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref AppRouteTableC
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayC

  DBSubnetARoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref DBRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayB

  DBSubnetBRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref DBRouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayB

  DBSubnetCRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref DBRouteTableC
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGatewayC

  WebSubnetRouteTableAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRouteTable
      SubnetId: !Ref WebSubnetA

  WebSubnetRouteTableAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRouteTable
      SubnetId: !Ref WebSubnetB

  WebSubnetRouteTableAssociationC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref WebRouteTable
      SubnetId: !Ref WebSubnetC

  AppSubnetRouteTableAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AppRouteTableA
      SubnetId: !Ref AppSubnetA

  AppSubnetRouteTableAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AppRouteTableB
      SubnetId: !Ref AppSubnetB

  AppSubnetRouteTableAssociationC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref AppRouteTableC
      SubnetId: !Ref AppSubnetC

  DBSubnetRouteTableAssociationA:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DBRouteTableA
      SubnetId: !Ref DBSubnetA

  DBSubnetRouteTableAssociationB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DBRouteTableB
      SubnetId: !Ref DBSubnetB

  DBSubnetRouteTableAssociationC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref DBRouteTableC
      SubnetId: !Ref DBSubnetC

Outputs:
  VPC:
    Description: VPC
    Value: !Ref VPC
  NATGatewayA:
    Description: NAT Gateway A
    Value: !Ref NatGatewayA
  NATGatewayB:
    Description: NAT Gateway B
    Value: !Ref NatGatewayB
  NATGatewayC:
    Description: NAT Gateway C
    Value: !Ref NatGatewayC    
  AvailabilityZoneA:
    Description: Availability Zone A
    Value: !GetAtt WebSubnetA.AvailabilityZone
  AvailabilityZoneB:
    Description: Availability Zone B
    Value: !GetAtt WebSubnetB.AvailabilityZone
  AvailabilityZoneC:
    Description: Availability Zone C
    Value: !GetAtt WebSubnetB.AvailabilityZone  
  WebSubnetA:
    Description: Web Subnet Availability Zone A
    Value: !Ref WebSubnetA
  WebSubnetB:
    Description: Web Subnet Availability Zone B
    Value: !Ref WebSubnetB
  WebSubnetC:
    Description: Web Subnet Availability Zone C
    Value: !Ref WebSubnetC    
  AppSubnetA:
    Description: App Subnet Availability Zone A
    Value: !Ref AppSubnetA
  AppSubnetB:
    Description: App Subnet Availability Zone B
    Value: !Ref AppSubnetB
  AppSubnetC:
    Description: App Subnet Availability Zone C
    Value: !Ref AppSubnetC    
  DBSubnetA:
    Description: DB Subnet Availability Zone A
    Value: !Ref DBSubnetA
  DBSubnetB:
    Description: DB Subnet Availability Zone B
    Value: !Ref DBSubnetB
  DBSubnetC:
    Description: DB Subnet Availability Zone C
    Value: !Ref DBSubnetC
